fork schedule: review — clock-derived digest version, geometry twin-check, catch-up boundary tests
Address the no-context review of the #295 fix:

- The digest-side "current" fork version (Status, discv5 filter, gossip) is
  now the schedule entry active at the WALL-CLOCK epoch on both engines,
  not the newest pinned entry. Without this the next fork could still only
  be appended after activation (a not-yet-active digest matches no peer),
  so installs in the field would still stall at the boundary. Pinned by a
  future-entry test per network on both sides.
- Rust twin of the Java geometry refusal: slots_per_period() asserts the
  schedule's slots_per_epoch equals the chain's; one binding per constructor.
- Boundary coverage for the catch-up path (LightClientUpdate with a proven
  next committee) on both engines, not only finality updates.
- ForkSchedule is a Java record; Fork holds the version as an int so value
  equality is generated; u64 slots >= 2^63 select the newest fork, not
  genesis; Hex.formatHex in toString; unused getters and the single-caller
  spec helper removed.
- Java boundary tests memoize the four distinct signed updates and sign at
  the 2/3 minimum participation.
- README: sepolia BPO row was stale.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>