@@ -1,7 +1,7 @@
 package com.jaeckel.ethp2p.core.consensus;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import com.jaeckel.ethp2p.core.encoding.Hex;
+
 import java.util.List;
 import java.util.Objects;
 
@@ -19,6 +19,14 @@ import java.util.Objects;
  * single configured value verifies one side and rejects every update on the other,
  * stalling sync at every consensus fork on every install (#295).
  *
+ * <p><b>Shippable ahead of activation.</b> The schedule may (and should) carry the
+ * NEXT scheduled fork before it activates: signature verification is keyed by the
+ * update's own slot, and the digest-side "active" version is read with
+ * {@link #versionAtEpoch(long)} at the wall-clock epoch — see
+ * {@code NetworkConfig.currentForkVersion()} — so a future entry changes nothing
+ * until its epoch arrives. Only the blob-parameter (EIP-7892) digest fold remains a
+ * single configured value.
+ *
  * <p><b>Trust posture.</b> Consensus-critical configuration with the same standing
  * as the genesis validators root: embedded, never fetched at runtime. The beacon
  * API's {@code /eth/v1/config/fork_schedule} exposes the same data and is the
@@ -27,69 +35,69 @@ import java.util.Objects;
  * <p>Lives in {@code :core} because both {@code :networking} (the config) and
  * {@code :consensus} (the processor) need it and neither depends on the other.
  * Android-safe: arrays and {@link List} only.
+ *
+ * @param slotsPerEpoch slots per epoch for THIS chain (32 on the mainnet preset,
+ *                      16 on gnosis). Bundled with the schedule so it can never be
+ *                      read with another chain's geometry; {@code NetworkConfig}
+ *                      refuses a schedule whose geometry differs from the chain's.
+ * @param forks         the entries, ascending by activation epoch, genesis first
  */
-public final class ForkSchedule {
+public record ForkSchedule(int slotsPerEpoch, List<Fork> forks) {
 
-    /** One scheduled fork: the epoch it activates at and its 4-byte version. */
-    public record Fork(long epoch, byte[] version) {
+    /**
+     * One scheduled fork. The version is held as the {@code int} the usual hex
+     * literal denotes — {@code fork(1714688, 0x06000064)} is Fulu on Gnosis — and
+     * rendered big-endian by {@link #versionBytes()}, the spec's {@code Version}
+     * byte order. An {@code int} rather than a {@code byte[]} so the record's
+     * generated equality is by value.
+     */
+    public record Fork(long epoch, int version) {
         public Fork {
             if (epoch < 0) throw new IllegalArgumentException("fork epoch must be >= 0");
-            if (version == null || version.length != 4)
-                throw new IllegalArgumentException("fork version must be 4 bytes");
-            version = version.clone();
         }
 
-        /** Defensive copy — the record component is a mutable array. */
-        @Override
-        public byte[] version() {
-            return version.clone();
+        /** The 4-byte fork version, big-endian. A fresh array on every call. */
+        public byte[] versionBytes() {
+            return new byte[]{
+                    (byte) (version >>> 24), (byte) (version >>> 16), (byte) (version >>> 8), (byte) version};
         }
-    }
-
-    private final int slotsPerEpoch;
-    private final List<Fork> forks;
-
-    private ForkSchedule(int slotsPerEpoch, List<Fork> forks) {
-        this.slotsPerEpoch = slotsPerEpoch;
-        this.forks = forks;
     }
 
     /**
-     * Build a schedule. Throws on: a non-positive {@code slotsPerEpoch}, an empty
-     * list, a first entry not at epoch 0, or epochs that are not strictly
+     * Validates on construction. Throws on: a non-positive {@code slotsPerEpoch},
+     * an empty list, a first entry not at epoch 0, or epochs that are not strictly
      * ascending. Each would silently select a wrong signing domain for some slot —
      * the "accepted and silently ignored" failure CLAUDE.md forbids for anything that
      * can change the answer — so the constructor refuses rather than defaults.
-     *
-     * @param slotsPerEpoch slots per epoch for THIS chain (32 on the mainnet preset,
-     *                      16 on gnosis). Bundled with the schedule so it can never
-     *                      be read with another chain's geometry.
      */
-    public static ForkSchedule of(int slotsPerEpoch, Fork... forks) {
+    public ForkSchedule {
         if (slotsPerEpoch <= 0)
             throw new IllegalArgumentException("fork schedule: slotsPerEpoch must be positive");
-        if (forks == null || forks.length == 0)
+        if (forks == null || forks.isEmpty())
             throw new IllegalArgumentException("fork schedule: at least the genesis fork is required");
-        if (forks[0].epoch() != 0)
+        for (Fork f : forks) Objects.requireNonNull(f, "fork schedule: null entry");
+        if (forks.get(0).epoch() != 0)
             throw new IllegalArgumentException("fork schedule: the first entry must activate at epoch 0");
-        for (int i = 1; i < forks.length; i++) {
-            if (forks[i - 1].epoch() >= forks[i].epoch())
+        for (int i = 1; i < forks.size(); i++) {
+            if (forks.get(i - 1).epoch() >= forks.get(i).epoch())
                 throw new IllegalArgumentException("fork schedule: activation epochs must be strictly ascending ("
-                        + forks[i - 1].epoch() + " then " + forks[i].epoch() + ")");
+                        + forks.get(i - 1).epoch() + " then " + forks.get(i).epoch() + ")");
         }
-        List<Fork> copy = new ArrayList<>(forks.length);
-        for (Fork f : forks) copy.add(Objects.requireNonNull(f));
-        return new ForkSchedule(slotsPerEpoch, Collections.unmodifiableList(copy));
+        forks = List.copyOf(forks);
     }
 
-    /**
-     * A fork entry from the version written as the usual hex literal, e.g.
-     * {@code fork(1714688, 0x06000064)} is Fulu on Gnosis — big-endian bytes
-     * {@code 06 00 00 64}, exactly the spec's {@code Version} byte order.
-     */
+    /** Build a schedule from entries (see the canonical constructor for what is refused). */
+    public static ForkSchedule of(int slotsPerEpoch, Fork... forks) {
+        if (forks == null) throw new IllegalArgumentException("fork schedule: at least the genesis fork is required");
+        for (Fork f : forks) {
+            if (f == null) throw new IllegalArgumentException("fork schedule: null entry");
+        }
+        return new ForkSchedule(slotsPerEpoch, List.of(forks));
+    }
+
+    /** A fork entry: {@code fork(1714688, 0x06000064)} is Fulu on Gnosis. */
     public static Fork fork(long epoch, int version) {
-        return new Fork(epoch, new byte[]{
-                (byte) (version >>> 24), (byte) (version >>> 16), (byte) (version >>> 8), (byte) version});
+        return new Fork(epoch, version);
     }
 
     /**
@@ -98,30 +106,20 @@ public final class ForkSchedule {
      * immaterial without a boundary; the mainnet preset is used so it is a real one.
      */
     public static ForkSchedule single(byte[] version) {
-        return of(32, new Fork(0, version));
-    }
-
-    public int slotsPerEpoch() {
-        return slotsPerEpoch;
-    }
-
-    /** The pinned entries, ascending by activation epoch; unmodifiable. */
-    public List<Fork> forks() {
-        return forks;
+        if (version == null || version.length != 4)
+            throw new IllegalArgumentException("fork version must be 4 bytes");
+        int v = ((version[0] & 0xff) << 24) | ((version[1] & 0xff) << 16) | ((version[2] & 0xff) << 8) | (version[3] & 0xff);
+        return of(32, fork(0, v));
     }
 
     /**
-     * The newest scheduled fork's version — what the legacy single
-     * {@code currentForkVersion} held. Feeds the fork DIGEST (discv5 filtering,
-     * Status), never signature verification.
+     * The newest scheduled fork's version — possibly not yet active. Callers that
+     * need the fork active NOW (the digest, Status) must use
+     * {@link #versionAtEpoch(long)} with the wall-clock epoch instead; this is for
+     * pins and diagnostics.
      */
-    public byte[] current() {
-        return forks.get(forks.size() - 1).version();
-    }
-
-    /** The fork before {@link #current()}, or {@code null} for a one-entry schedule. */
-    public byte[] prior() {
-        return forks.size() >= 2 ? forks.get(forks.size() - 2).version() : null;
+    public byte[] newest() {
+        return forks.get(forks.size() - 1).versionBytes();
     }
 
     /**
@@ -129,12 +127,26 @@ public final class ForkSchedule {
      * activation epoch is {@code <= epoch}. Total — the genesis entry covers epoch 0.
      */
     public byte[] versionAtEpoch(long epoch) {
+        return forkAtEpoch(epoch).versionBytes();
+    }
+
+    /**
+     * The version of the fork BEFORE the one active at {@code epoch}, or
+     * {@code null} when that is the genesis fork. The discv5 prior-digest fallback
+     * input (see {@code NetworkConfig.acceptedForkDigests}).
+     */
+    public byte[] priorVersionAtEpoch(long epoch) {
+        int i = forks.indexOf(forkAtEpoch(epoch));
+        return i >= 1 ? forks.get(i - 1).versionBytes() : null;
+    }
+
+    private Fork forkAtEpoch(long epoch) {
         Fork chosen = forks.get(0);
         for (Fork f : forks) {
             if (f.epoch() <= epoch) chosen = f;
             else break;
         }
-        return chosen.version();
+        return chosen;
     }
 
     /**
@@ -145,29 +157,15 @@ public final class ForkSchedule {
      * <p>The {@code - 1} is not a detail: the aggregate is over the block of the
      * previous slot, so a signature at the first slot of a fork's activation epoch
      * still uses the old version, and only the next slot switches.
+     *
+     * <p>{@code signatureSlot} is an SSZ {@code uint64}; a value at or above
+     * 2^63 arrives negative in a {@code long} and is treated as the far future
+     * (newest fork), never as slot 0.
      */
     public byte[] versionForSignatureSlot(long signatureSlot) {
+        if (signatureSlot < 0) return newest();
         long slot = Math.max(signatureSlot, 1L) - 1L;
         return versionAtEpoch(slot / slotsPerEpoch);
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof ForkSchedule other)) return false;
-        if (slotsPerEpoch != other.slotsPerEpoch || forks.size() != other.forks.size()) return false;
-        for (int i = 0; i < forks.size(); i++) {
-            if (forks.get(i).epoch() != other.forks.get(i).epoch()) return false;
-            if (!java.util.Arrays.equals(forks.get(i).version(), other.forks.get(i).version())) return false;
-        }
-        return true;
-    }
-
-    @Override
-    public int hashCode() {
-        int h = slotsPerEpoch;
-        for (Fork f : forks) h = 31 * h + Long.hashCode(f.epoch()) * 31 + java.util.Arrays.hashCode(f.version());
-        return h;
     }
 
     @Override
@@ -176,8 +174,7 @@ public final class ForkSchedule {
         for (int i = 0; i < forks.size(); i++) {
             Fork f = forks.get(i);
             if (i > 0) sb.append(", ");
-            sb.append(f.epoch()).append(':');
-            for (byte b : f.version()) sb.append(String.format("%02x", b));
+            sb.append(f.epoch()).append(':').append(Hex.formatHex(f.versionBytes()));
         }
         return sb.append("]}").toString();
     }
